--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">android-basic</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="button1">Current Time</string> 
+    <string name="login_name">Login and Register</string>
+    <string name="brower">Web Brower</string>
+    <string name="news">新闻快递</string>
 
 </resources>
